<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/newGameBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:textSize="@dimen/menu_btn_text_size"/>

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_continue"
        android:textSize="@dimen/menu_btn_text_size"/>

    <Button
        android:id="@+id/exitGameBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_game"
        android:textSize="@dimen/menu_btn_text_size"/>

</LinearLayout>
